# RkCNN_SAE

./: .gitignore  CLAUDE.md  LICENSE  README.md  RkCNN-SAE Experiment Improvement Guide.md  pyproject.toml  requirements.txt  rkcnn-mechinterp-implementation-plan.md
configs/: phase1.yaml  phase2.yaml
experiments/: hyperparameter_sweep.py  interpretability_analysis.py  multi_layer_analysis.py  phase1_toy_model.py  phase2_gpt2.py
results/: multi_layer_real_results.json  phase2_real_gpt2_results.json  phase2_results.json
results/hyperparam_sweep/: hyperparam_sweep_results.json
results/multi_layer/: multi_layer_results.json
results/phase1/: phase1_results.json
results/phase2/: phase2_results.json
rkcnn_sae/: __init__.py
rkcnn_sae/core/: __init__.py  rkcnn_probe.py  separation_score.py  subset_sampler.py
rkcnn_sae/data/: __init__.py  activation_cache.py
rkcnn_sae/evaluation/: __init__.py  metrics.py
rkcnn_sae/interpretability/: __init__.py  activation_store.py  metrics.py  revived_detector.py  top_activations.py  visualization.py
rkcnn_sae/models/: __init__.py  rkcnn_sae.py  sae.py  toy_model.py
scripts/: generate_assets.py  run_phase2_safe.sh  runpod_setup.sh  runpod_setup_real_gpt2.sh
tests/: __init__.py  test_metrics.py  test_rkcnn_probe.py  test_sae.py  test_separation_score.py  test_subset_sampler.py  test_toy_model.py
